force-app/main/default/objects/Locataire__c/Locataire__c.object-meta.xml
<CustomObject>
    <label>Locataire</label>
    <nameField>
        <label>Nom complet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locataires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>