force-app/main/default/objects/Locataire__c/fields/Adresse_Correspondance__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Correspondance__c</fullName>
    <label>Adresse de correspondance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>