force-app/main/default/objects/Locataire__c/fields/Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal__c</fullName>
    <label>Code Postal</label>
    <type>Text</type>
    <length>10</length>
</CustomField>