force-app/main/default/objects/Locataire__c/fields/Date_Naissance__c.field-meta.xml
<CustomField>
    <fullName>Date_Naissance__c</fullName>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>