force-app/main/default/objects/Locataire__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <label>Nom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>