force-app/main/default/objects/Locataire__c/fields/Prenom__c.field-meta.xml
<CustomField>
    <fullName>Prenom__c</fullName>
    <label>Prénom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>