force-app/main/default/objects/Locataire__c/fields/Revenu_Mensuel__c.field-meta.xml
<CustomField>
    <fullName>Revenu_Mensuel__c</fullName>
    <label>Revenu Mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>