force-app/main/default/objects/Locataire__c/fields/Situation_Professionnelle__c.field-meta.xml
<CustomField>
    <fullName>Situation_Professionnelle__c</fullName>
    <label>Situation Professionnelle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salarié</fullName>
            </value>
            <value>
                <fullName>Indépendant</fullName>
            </value>
            <value>
                <fullName>Retraité</fullName>
            </value>
            <value>
                <fullName>Étudiant</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>