force-app/main/default/objects/Locataire__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Téléphone</label>
    <type>Text</type>
    <length>20</length>
</CustomField>