force-app/main/default/objects/Locataire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prenom__c</columns>
    <columns>Code_Postal__c</columns>
    <columns>Ville__c</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>